zetasql/analyzer/testdata/create_database.test
[default language_features=NONE]
create database db;
--
CreateDatabaseStmt(name_path=db)
==

# One option.
create database db options(db_option=1);
--
CreateDatabaseStmt
+-name_path=db
+-option_list=
  +-db_option := Literal(type=INT64, value=1)
==

# Multiple options.
create database db options(option_1=1,option_2='2');
--
CreateDatabaseStmt
+-name_path=db
+-option_list=
  +-option_1 := Literal(type=INT64, value=1)
  +-option_2 := Literal(type=STRING, value="2")
==

# Use a path expression for database name.
create database a.b.db;
--
CreateDatabaseStmt(name_path=a.b.db)
==

# Invalid option.
create database db options(db_option=1+'2');
--
ERROR: No matching signature for operator +
  Argument types: INT64, STRING
  Signature: INT64 + INT64
    Argument 2: Unable to coerce type STRING to expected type INT64
  Signature: UINT64 + UINT64
    Argument 2: Unable to coerce type STRING to expected type UINT64
  Signature: DOUBLE + DOUBLE
    Argument 2: Unable to coerce type STRING to expected type DOUBLE [at 1:38]
create database db options(db_option=1+'2');
                                     ^
==

[disallow_duplicate_options]
create database db options(option_1=1,option_1='2');
--
ERROR: Duplicate option specified for 'option_1' [at 1:39]
create database db options(option_1=1,option_1='2');
                                      ^
